--- a/production_card.css
+++ b/production_card.css
@@ -1,1 +1,11 @@
-
+.card{
+  backgorund-color: white;
+  width: 250px;
+  height: 300px;
+  box-shadow: 10px 10px 5px #ccc;
+  text-align: center;
+  display: inline-block;
+  margin: 25px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
