--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ nav{
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
-a:hover{
+.navs:hover{
     filter: brightness(0.9);
 }
 ul{
