--- a/CSS/index.css
+++ b/CSS/index.css
@@ -77,4 +77,8 @@ a:visited{
     text-decoration: none;
     text-align: center;
     vertical-align: center;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
