--- a/CSS/index.css
+++ b/CSS/index.css
@@ -76,7 +76,7 @@ a:visited{
     width: 100px;
     text-decoration: none;
     text-align: center;
-    vertical-align: center;
+    vertical-align: middle;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
