--- a/CSS/index.css
+++ b/CSS/index.css
@@ -74,6 +74,7 @@ a:visited{
     right: 20px;
     height: 100px;
     width: 100px;
+    padding: auto;
     text-decoration: none;
     text-align: center;
     vertical-align: middle;
