--- a/CSS/project.css
+++ b/CSS/project.css
@@ -33,11 +33,11 @@ nav{
 }
 #tag > a{
   background-color: #9ef5ff5a;
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 10px;
   text-decoration: none;
   color: #8ab4f8;
-  margin: 5px 10px;
+  margin: 5px;
 }
 #urls > a{
   color: #8ab4f8;
