--- a/CSS/production_card.css
+++ b/CSS/production_card.css
@@ -1,5 +1,5 @@
 .card{
-  backgorund-color: white;
+  background-color: white;
   width: 250px;
   height: 300px;
   box-shadow: 10px 10px 5px #ccc;
