--- a/CSS/production_card.css
+++ b/CSS/production_card.css
@@ -8,6 +8,7 @@
   margin: 25px;
   border-radius: 5px;
   border: 1px solid gray;
+  white-space: normal;
 }
 .card > img,.card > a > img{
   height: 150px;
