--- a/CSS/index.css
+++ b/CSS/index.css
@@ -91,3 +91,10 @@ h1,h2,h3,h4,h5,h6{
     margin: 0;
     padding: 0;
 }
+.dot::before{
+    display: inline-block;
+    width: 0.75em;
+    height: 0.75em;
+    background-color: #fcb6aa;
+    border-radius: 100%;
+}
