--- a/CSS/index.css
+++ b/CSS/index.css
@@ -92,6 +92,8 @@ h1,h2,h3,h4,h5,h6{
     padding: 0;
 }
 .dot::before {
+    transition: all 0.3s ease;
+    animation: expanition 0.3s;
     content: '';
     display: inline-block;
     width: 0.5em;
@@ -101,4 +103,12 @@ h1,h2,h3,h4,h5,h6{
     z-index: 100;
     vertical-align: middle;
     margin: -12.5px -5px auto auto;
+}
+@keyframes expansion {
+    from{
+        transform: scale(0);
+    }
+    to{
+       transform: scale(1); 
+    }
 }
