--- a/CSS/index.css
+++ b/CSS/index.css
@@ -92,8 +92,8 @@ h1,h2,h3,h4,h5,h6{
     padding: 0;
 }
 .dot::before {
-    transition: all 0.3s ease;
-    animation: expanition 0.3s;
+    transition: all 0.3s ease-in;
+    animation: expansion 0.3s;
     content: '';
     display: inline-block;
     width: 0.5em;
