--- a/CSS/index.css
+++ b/CSS/index.css
@@ -100,7 +100,7 @@ h1,h2,h3,h4,h5,h6{
     height: 0.5em;
     background-color: #fcb6aa;
     border-radius: 100%;
-    position: realative;
+    position: absolute;
     z-index: 10;
     vertical-align: middle;
     margin: -12.5px -5px auto auto;
