--- a/CSS/project.css
+++ b/CSS/project.css
@@ -12,6 +12,7 @@ nav{
   width: 200px;
   color: white;
   transition: all 0.3s ease;
+  text-decoration: none;
   border: none;
   cursor: pointer;
 }
