--- a/CSS/index.css
+++ b/CSS/index.css
@@ -63,7 +63,7 @@ a.navs{
 a{
     color: blue;
 }
-a:visited:not(.button,.navs){
+a:visited:not(.button,.navs,.whiteURL){
     color: blue;
 }
 #top{
@@ -104,6 +104,9 @@ h1,h2,h3,h4,h5,h6{
     z-index: 10;
     vertical-align: middle;
     margin: 0 0 auto auto;
+}
+.whiteURL{
+    color: white;
 }
 @keyframes expansion {
     from{
